mobile header and create section main-spellbind and mobilespellbind

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     /> -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="./css/style.css.map" />
+
     <title>Document</title>
   </head>
   <body>
@@ -64,33 +65,54 @@
                 <div class="header__titles-item">
                   <span class="header__titles-item--number">01</span>
                   <h2>Title here</h2>
-                  <p>Lorem ipsum dolor sit amet et amet ist ame.</p>
+                  <p class="header__titles-item--text">
+                    Lorem ipsum dolor sit amet et amet ist ame.
+                  </p>
                 </div>
                 <div class="header__titles-item">
                   <span class="header__titles-item--number">02</span>
                   <h2>Title here</h2>
-                  <p>Lorem ipsum dolor sit amet et amet ist ame.</p>
+                  <p class="header__titles-item--text">
+                    Lorem ipsum dolor sit amet et amet ist ame.
+                  </p>
                 </div>
                 <div class="header__titles-item">
                   <span class="header__titles-item--number">03</span>
                   <h2>Title here</h2>
-                  <p>Lorem ipsum dolor sit amet et amet ist ame.</p>
+                  <p class="header__titles-item--text">
+                    Lorem ipsum dolor sit amet et amet ist ame.
+                  </p>
                 </div>
                 <img
                   class="header__titles-image"
                   src="./image/hussan-amir.png"
-                  alt=""
+                  alt="hussan-amir"
                 />
               </div>
             </div>
           </div>
         </div>
         <div class="social">
-          <a href="">Fb</a>
-          <a href="">In</a>
-          <a href="">Tw</a>
+          <a href="#">Fb</a>
+          <a href="#">In</a>
+          <a href="#">Tw</a>
         </div>
       </header>
+      <section class="main__top">
+        <div class="main_top-content">
+          <div class="main__top-bg">
+            <img src="./image/main-image-road.png" alt="main-image-road" />
+          </div>
+          <div class="main__top-text">
+            <h3>The walkways of Indonesia spellbind</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adip iscing elit. Fusce
+              commodo magna et libero mollis rhoncus.
+            </p>
+            <button class="main__top-btn">Learn More</button>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
