--- a/src/index.html
+++ b/src/index.html
@@ -230,6 +230,39 @@
           </div>
         </div>
       </section>
+      <section class="experience__life">
+        <!-- <div class="experience__life-content"> -->
+        <h3>
+          Live a life like you wouldn’t imagine, experience a <br />
+          life you wouldn’t expect.
+        </h3>
+        <div class="experience__life-image">
+          <img src="./image/ex-image.png" alt="" />
+        </div>
+        <div class="experience__life-bottom">
+          <div class="experience__life-bottom-item">
+            <img src="./image/experience/country.png" alt="country" />
+            <div class="experience__life-bottom-item--content">
+              <p class="experience__life-bottom-item-first">In The Country</p>
+              <p class="experience__life-bottom-item-second">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Phasellus dapibus mauris in lectus tempus.
+              </p>
+            </div>
+          </div>
+          <div class="experience__life-bottom-item">
+            <img src="./image/experience/city.png" alt="city" />
+            <div class="experience__life-bottom-item--content">
+              <p class="experience__life-bottom-item-first">In The Country</p>
+              <p class="experience__life-bottom-item-second">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Phasellus dapibus mauris in lectus tempus.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- </div> -->
+      </section>
       <section class="gallery">
         <h2>Photo Gallery</h2>
         <p>
