--- a/src/index.html
+++ b/src/index.html
@@ -233,8 +233,11 @@
       <section class="experience__life">
         <!-- <div class="experience__life-content"> -->
         <h3>
-          Live a life like you wouldn’t imagine, experience a <br />
-          life you wouldn’t expect.
+          Live a life like you wouldn’t imagine,<br />
+          experience a <br />
+          life you <br />
+          wouldn’t <br />
+          expect.
         </h3>
         <div class="experience__life-image">
           <img src="./image/ex-image.png" alt="" />
@@ -261,6 +264,7 @@
             </div>
           </div>
         </div>
+
         <!-- </div> -->
       </section>
       <section class="gallery">
